<resources>
    <string name="app_name">TV Program (EPG)</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact us</string>
    <string name="company_info">MyCompany Longford, Co. Longford, Republic of Ireland.</string>
    <string name="phone_number">Phone number :</string>
    <string name="settings">Settings</string>
    <string name="company_information">Company information</string>
    <string name="call_number">+353 888 999 111</string>
    <string name="loading_channels">Loading channels</string>
    <string name="programme">Programme</string>
</resources>