<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.company.CompanyFragment"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_information"/>

    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/company_info"
         />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/phone_number"/>
        <Button
            android:id="@+id/call_number"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:text="@string/call_number"/>
    </LinearLayout>

</LinearLayout>