<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".api.fragments.settings.SettingsFragment"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"/>

    </androidx.appcompat.widget.Toolbar>
    <androidx.cardview.widget.CardView
        android:id="@+id/FAQ"
        android:layout_marginTop="20dp"
        android:layout_width="320dp"
        android:layout_height="64dp"
        android:layout_gravity="center" >
        <TextView
            android:id="@+id/faq_text"
            android:text="@string/faq"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/contact"
        android:layout_marginTop="20dp"
        android:layout_width="320dp"
        android:layout_height="64dp"
        android:layout_gravity="center" >
        <TextView
            android:id="@+id/contact_text"
            android:text="@string/contact_us"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />
    </androidx.cardview.widget.CardView>
</LinearLayout>